Tweaking fullscreen bg images

--- a/wp-content/themes/theblog-child/css/style.css
+++ b/wp-content/themes/theblog-child/css/style.css
@@ -245,14 +245,13 @@ body.blog #body-wrap {
 /* PLATFORM > FOOD PRODUCERS */
 /* line 240, ../sass/style.css.sass */
 body.page-id-26 #cactus-body-container {
-  background-position: center top;
+  background-position: center 200px;
   background-repeat: no-repeat;
   background-size: 100% auto;
-  background-image: url("../img/wp-fullscreen-bg03.jpg");
-  background-position: center 200px; }
-  /* line 245, ../sass/style.css.sass */
+  background-image: url("../img/wp-fullscreen-bg03.jpg"); }
+  /* line 244, ../sass/style.css.sass */
   body.page-id-26 #cactus-body-container .cactus-single-page .container {
     background-color: transparent; }
-    /* line 247, ../sass/style.css.sass */
+    /* line 246, ../sass/style.css.sass */
     body.page-id-26 #cactus-body-container .cactus-single-page .container .single-page-content {
       background-color: transparent; }
