--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -234,8 +234,11 @@ body.blog #body-wrap
 
 /*
 /*
-/* PLATFORM > FOOD PRODUCERS */
+/* PLATFORM  */
 
+// TODO Rohan: i've sliced these images at 1400w / 356h, 65% quality. may need some tweaking / playing around depending on design implementaiton.
+
+/* > FOOD PRODUCERS */
 body.page-id-26 
 	#cactus-body-container
 		@include fullwidthbg
@@ -246,6 +249,26 @@ body.page-id-26
 				.single-page-content
 					background-color: transparent
 
- 
+/* > FOOD HUBS */
+body.page-id-29 
+	#cactus-body-container
+		@include fullwidthbg
+		background-image: url('../img/wp-fullscreen-bg01.jpg')
+		.cactus-single-page
+			.container
+				background-color: transparent
+				.single-page-content
+					background-color: transparent
+
+/* > FOOD SYSTEM PARTNERS */
+body.page-id-34
+	#cactus-body-container
+		@include fullwidthbg
+		background-image: url('../img/wp-fullscreen-bg02.jpg')
+		.cactus-single-page
+			.container
+				background-color: transparent
+				.single-page-content
+					background-color: transparent 
 
 
