Fix navbar hover thing don't want white text on white bg!

--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -77,6 +77,7 @@ body.home.page
 		background-color: white
 header .nav-default > .navbar-default
 	// position: static
+	// TODO Rohan - move this guy down from top:0 to top:40 or so with JS animation
 
 .alert.alert-shop
 	background-color: lighten($OFN-brand, 30%)
@@ -97,7 +98,9 @@ header .nav-default > .navbar-default .navbar-toggle .icon-bar
 
 header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a, .off-canvas-inner .off-menu > ul li a
 	color: rgba($OFN-grey, 0.6)
-	&:hover, &:focus, &:active, header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a
+	&:hover, &:focus, &:active, 
+	header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a, 
+	header .nav-default.index-v2 > .navbar-default ul > li:hover > a
 		color: rgba($OFN-grey, 1.0)
 
 
