--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -101,7 +101,7 @@ header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.
 	&:hover, &:focus, &:active, 
 	header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a, 
 	header .nav-default.index-v2 > .navbar-default ul > li:hover > a
-		color: rgba($OFN-grey, 1.0)
+		color: rgba($OFN-grey, 1.0) !important
 
 
 
