--- a/wp-content/themes/theblog-child/sass/style.css.sass
+++ b/wp-content/themes/theblog-child/sass/style.css.sass
@@ -98,12 +98,8 @@ header .nav-default > .navbar-default .navbar-toggle .icon-bar
 
 header .nav-default > .navbar-default .navbar-nav > li > a, header .nav-default.index-v2 > .navbar-default .navbar-nav > li > a, .off-canvas-inner .off-menu > ul li a
 	color: rgba($OFN-grey, 0.6)
-	&:hover, &:focus, &:active, 
-	header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a, 
-	header .nav-default.index-v2 > .navbar-default ul > li:hover > a
+	&:hover, &:focus, &:active, header .nav-default.index-v2 > .navbar-default .navbar-nav > li:hover > a, header .nav-default.index-v2 > .navbar-default ul > li:hover > a
 		color: rgba($OFN-grey, 1.0) !important
-
-
 
 /*
 /*
